Added FUS DNA repair post

--- a/plos0612.html
+++ b/plos0612.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Profilin 1 is associated with stress granules
+    <title>FUS regulated RNA metabolism and DNA damage repair
         </title>
 
     <!-- Bootstrap Core CSS -->
@@ -74,7 +74,7 @@
                 <!-- Blog Post -->
 
                 <!-- Title -->
-                <h2>Profilin 1 is associated with stress granules</h2>
+                <h2>FUS regulated RNA metabolism and DNA damage repair</h2>
 
                 <!-- Author -->
                 <p class="lead">
@@ -84,20 +84,20 @@
                 <hr>
 
                 <!-- Date/Time -->
-                <p><span class="glyphicon glyphicon-time"></span> Posted on September 17, 2014 at 3:10 PM</p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on September 29, 2014 at 10:47 AM</p>
 
 
                 <!-- Post Content -->
-                <p class="lead">Mutations in the gene encoding profilin 1 are a cause of fALS, but the mechanisms through which these mutations cause ALS are unknonw.
-                In a study published in June on The Journal of Neuroscience, a team of researchers from Stanford University used yeast to try to gain a better understanding of the pathogenic mechanism of the mutations.</p>
-                <p>Profilin 1 is an actin binding protein that regulates actin polymerization. In 2012 the gene was found to be a cause of fALS. </p>
-                <p>The team of scientist expressed ALS-linked profilin 1 mutants in yeast. They found that the mutations cause a loss of function. Two mutations affected expression levels and protein stability compared to wild type. </p>
-                <p>Next they tested if the ALS-linked profilin 1 proteins caused a toxic gain of function. No toxicity was observed with profilin 1 variant overexpression, suggesting there is not a toxic gain of function mechanism.</p>
-                <p>Afterwards they performed an unbiested GWAS screen to identify gene deletions that became lethal when combined with the profilin 1 deletion. They identified 127 gene deletions that were lethal/sick in combination with Pfy1, including 6 of the 7 genes that regulate protein urmylation (attachment of ubiquitin like protein URM1 to another protein. This process might be enhanced by oxidative stress), and several genes encoding members of dynein and dynactin complexes.  </p>
-                <p>A lot of genes encoding stress granule associated proteins were also found to interact with Pfy1 in the lethal screen. Notably, Pbp1 was found to interact with Pfy1. Pbp1 is a modifier of yeast stress granule formation (the yeast ortholog of ataxin 2) </p>
-                <p>Since a role for profilin 1 in stress granules had not been reported previously, they checked whether profilin 1 could associate with stress granules in human cells. They found prominent colocalization to profilin 1 with ataxin 2 positive stress granules in two independent human cell lines with 3 different stressors and 3 different stress granule markers. They checked whether profilin 1 and 2 associate with stress granules in neurons, and they found that both profilin 1 and 2 colocalize with ataxin 2 positive neuronal stress granules.</p>
-                <p>Next they checked whether ALS linked mutations in profilin 1 alter its ability to be cleared from stress granules. They found that profilin 1 may promote stress granule assembly and that overexpression of profilin 1 may cause a gain of function and.or dominant negative toxicity. They also found that profilin 1 is not required for stress granule formation in response to heat shock stress. </p>
-                <p>Figley, M. D., Bieri, G., Kolaitis, R.-M., Taylor, J. P., & Gitler, A. D. (2014). Profilin 1 associates with stress granules and ALS-linked mutations alter stress granule dynamics. The Journal of Neuroscience : The Official Journal of the Society for Neuroscience, 34(24), 8083–97. doi:10.1523/JNEUROSCI.0543-14.2014</p>
+                <p class="lead">FUS cytoplasmic inclusions in neurons and glia are a characteristic of ALS and FTD. These inclusions cause a dysregulation in RNA metabolism. A study published on PLOS Genetics in June 2014
+                shows that FUS targets RNA for pre-mRNA alternative splicing and processing of long intron containing transcripts, which are enriched for genes in neurogenesis and gene expression regulation. </p>
+                <p>FUS has been found to be mutated in about 5% of fALS cases and some rare cases of sALS. Over 40 FUS mutations have been identified in ALS, most are missense point mitations clustered in the C terminus. FUS is an RNA binding protein located in the nucleus, which regulated RNA metabolism (transcription, alternative splicing and mRNA transport). FUS also functions in neuron's cytoplasm to facilitate mRNA transpport to dendrites, which affects synaptic formation.</p>
+                <p>This paper reports that introns of pre-mRNA account for 60-80% of all FUS binding sites, which suggest that thee main role of FUS is to regulate pre-mRNA processing. There are 653 FUS associated alternative splicing events. FUS deficiency results in expression changes of more than 600 RNAs and splicing changes of more than 370 RNAs in mouse brains. Many of the alternative splice targets in the mouse brain play important roles in axonogenesis, cytoskeleton organization, cell adhesion and synaptic formation. The dysregulation of these RNAs may be what leads to neurodegeneration in ALS and FTD. </p>
+                <p>FUS asssociated cassette exons are enriched for genes regulating transcription, suggesting that FUS may regulate neurogenesis through modulating the alternative splicing of important transcription and splicing regulators. </p>
+                <p>Summary: FUS RNA targets suggest that FUS regulated splicing of genes associated with gene expression and neurogenesis and the dysregulated splicing of those targets may lead to neurodegeneration. </p>
+                <p>FUS also preferrentially binds to long introns in HeLa cells; it is therefore possible that FUS facilitates proper splicing or regulated the stability of long intron containing transcripts. There are 2 main groups of genes for which FUS associated long introns are enrichedL gens that regulate neuronal development and genes that regulate transcription. </p>
+                <p>This study and previous studies demonstrated that FUS is required for DNA damage repair. FUS deficiency in mice results in genomic instability on the chromosomal level, and defects in B cell development. Defects in FUS regulated DNA damage repair might promote neurodegeneration. CLIP-seq data shows that FUS might regulate the alternative splicing of genes important in DNA damage response and repair pathways. </p>
+                <p>Summary: FUS preferrentially binds to long introns and DNA damage repair may be defective in neurons expressing ALS-FUS mutants. </p>
+                <p>Zhou, Y., Liu, S., & Hicks, G. G. (2014). FUS-regulated RNA metabolism and DNA damage repair, 1–8.</p>
                 <hr>
 
                 <!-- Blog Comments -->
@@ -129,51 +129,51 @@
                 <a class="btn btn-danger btn-lg" href="http://eepurl.com/2fBqL" style="color: #FFFFFF">Subscribe to my feed</a>
               </div>
 
-            <div class="panel panel-default">
-  <div class="panel-heading">
-    <h4>Latest Posts</h4>
-  </div>
-  <ul class="list-group">
-    <li class="list-group-item"><a href="plos0612.html">1. FUS regulated RNA metabolism and DNA damage repair </a></li>
-    <li class="list-group-item"><a href="jneurosci0611.html">2. Profilin 1 is associated with stress granules </a></li>
-    <li class="list-group-item"><a href="science0905.html">3. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
-    <li class="list-group-item"><a href="nature2108.html">4. Telomerase Expression in ALS </a></li>
-    <li class="list-group-item"><a href="neuron2002.html">5. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
-  </ul>
-</div>
+             <div class="panel panel-default">
+               <div class="panel-heading">
+                 <h4>Latest Posts</h4>
+               </div>
+               <ul class="list-group">
+                 <li class="list-group-item"><a href="plos0612.html">1. FUS regulated RNA metabolism and DNA damage repair </a></li>
+                 <li class="list-group-item"><a href="jneurosci0611.html">2. Profilin 1 is associated with stress granules </a></li>
+                 <li class="list-group-item"><a href="science0905.html">3. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
+                 <li class="list-group-item"><a href="nature2108.html">4. Telomerase Expression in ALS </a></li>
+                 <li class="list-group-item"><a href="neuron2002.html">5. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
+               </ul>
+             </div>
 
- <!-- Blog Categories Well -->
- <div class="well">
-     <h4>Blog Categories</h4>
-     <div class="row">
-         <div class="col-lg-6">
-             <ul class="list-unstyled">
-                 <li><a href="newest.html">Newest Research</a>
-                 </li>
-                 <li><a href="pipeline.html">Pipeline</a>
-                 </li>
-                 <li><a href="major.html">Major Papers</a>
-                 </li>
-             </ul>
-         </div>
-     </div>
- </div>
+              <!-- Blog Categories Well -->
+              <div class="well">
+                  <h4>Blog Categories</h4>
+                  <div class="row">
+                      <div class="col-lg-6">
+                          <ul class="list-unstyled">
+                              <li><a href="newest.html">Newest Research</a>
+                              </li>
+                              <li><a href="pipeline.html">Pipeline</a>
+                              </li>
+                              <li><a href="major.html">Major Papers</a>
+                              </li>
+                          </ul>
+                      </div>
+                  </div>
+              </div>
 
- <div class="panel panel-default">
-   <div class="panel-heading">
-     <h4>Tags</h4>
-   </div>
-   <div class="panel-body">
-     <ul class="list-inline">
-       <li><a href="c9orf72.html">C9ORF72</a></li>
-       <li><a href="smallMolecules.html">Small Molecules</a></li>
-       <li><a href="biomarkers.html">Biomarkers</a></li>
-       <li><a href="telomerase.html">Telomerase</a></li>
-       <li><a href="pfy1.html">PFY1</a></li>
-       <li><a href="fus.html">FUS</a></li>
-     </ul>
-   </div>
-</div>
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4>Tags</h4>
+                </div>
+                <div class="panel-body">
+                  <ul class="list-inline">
+                    <li><a href="c9orf72.html">C9ORF72</a></li>
+                    <li><a href="smallMolecules.html">Small Molecules</a></li>
+                    <li><a href="biomarkers.html">Biomarkers</a></li>
+                    <li><a href="telomerase.html">Telomerase</a></li>
+                    <li><a href="pfy1.html">PFY1</a></li>
+                    <li><a href="fus.html">FUS</a></li>
+                  </ul>
+                </div>
+          </div>
 
 
     <!-- Side Widget Well -->
