--- a/2.html
+++ b/2.html
@@ -72,6 +72,20 @@
 
                 <article>
                 <h2>
+                Telomerase Expression in ALS
+
+                </h2>
+                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
+                </p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on September 1, 2014 at 1:00 PM</p>
+                <p>Telomerase has been linked to several neurological disorders. Human telomerase reverse transcriptase (hTERT) expression had never been characterized in ALS.
+                In a study plublished on August 21 on the Journal of Human Genetics, a team of researchers from Italy characterized telomerase in blood samples and spinal cord from 50 ALS patients and 50 controls.</p>
+                <a class="btn btn-danger" href="nature2108.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <hr>
+              </article>
+
+                <article>
+                <h2>
                 Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides
 
                 </h2>
@@ -139,72 +153,51 @@
                </div>-->
 
                <div class="panel panel-default">
-                 <div class="panel-heading">
-                   <h4>Latest Posts</h4>
-                 </div>
-                 <ul class="list-group">
-                   <li class="list-group-item"><a href="jneurosci0611.html">1. Profilin 1 is associated with stress granules </a></li>
-                   <li class="list-group-item"><a href="science0905.html">2. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
-                   <li class="list-group-item"><a href="nature2108.html">3. Telomerase Expression in ALS </a></li>
-                   <li class="list-group-item"><a href="neuron2002.html">4. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
-                   <li class="list-group-item"><a href="neuron1408.html">5. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
-                 </ul>
-               </div>
-
-                <!-- Blog Categories Well -->
-                                <!-- Blog Categories Well -->
-                <div class="well">
-                    <h4>Blog Categories</h4>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="newest.html">Newest Research</a>
-                                </li>
-                                <li><a href="pipeline.html">Pipeline</a>
-                                </li>
-                                <li><a href="major.html">Major Papers</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- /.col-lg-6
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                            </ul>
-                        </div>
-                         /.col-lg-6 -->
-                    </div>
-                    <!-- /.row -->
-                </div>
-
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4>Tags</h4>
-                  </div>
-                  <div class="panel-body">
-                    <ul class="list-inline">
-                      <li><a href="c9orf72.html">C9ORF72</a></li>
-                      <li><a href="smallMolecules.html">Small Molecules</a></li>
-                      <li><a href="biomarkers.html">Biomarkers</a></li>
-                      <li><a href="telomerase.html">Telomerase</a></li>
-                      <li><a href="pfy1.html">PFY1</a></li>
-                      <!--<li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>-->
-        </ul>
-    </div>
+  <div class="panel-heading">
+    <h4>Latest Posts</h4>
+  </div>
+  <ul class="list-group">
+    <li class="list-group-item"><a href="plos0612.html">1. FUS regulated RNA metabolism and DNA damage repair </a></li>
+    <li class="list-group-item"><a href="jneurosci0611.html">2. Profilin 1 is associated with stress granules </a></li>
+    <li class="list-group-item"><a href="science0905.html">3. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
+    <li class="list-group-item"><a href="nature2108.html">4. Telomerase Expression in ALS </a></li>
+    <li class="list-group-item"><a href="neuron2002.html">5. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
+  </ul>
 </div>
+
+ <!-- Blog Categories Well -->
+ <div class="well">
+     <h4>Blog Categories</h4>
+     <div class="row">
+         <div class="col-lg-6">
+             <ul class="list-unstyled">
+                 <li><a href="newest.html">Newest Research</a>
+                 </li>
+                 <li><a href="pipeline.html">Pipeline</a>
+                 </li>
+                 <li><a href="major.html">Major Papers</a>
+                 </li>
+             </ul>
+         </div>
+     </div>
+ </div>
+
+ <div class="panel panel-default">
+   <div class="panel-heading">
+     <h4>Tags</h4>
+   </div>
+   <div class="panel-body">
+     <ul class="list-inline">
+       <li><a href="c9orf72.html">C9ORF72</a></li>
+       <li><a href="smallMolecules.html">Small Molecules</a></li>
+       <li><a href="biomarkers.html">Biomarkers</a></li>
+       <li><a href="telomerase.html">Telomerase</a></li>
+       <li><a href="pfy1.html">PFY1</a></li>
+       <li><a href="fus.html">FUS</a></li>
+     </ul>
+   </div>
+</div>
+
 
 
 
