--- a/fus.html
+++ b/fus.html
@@ -67,50 +67,23 @@
             <div class="col-md-8">
 
                 <h1 class="page-header">
-                    C9ORF72
+                    FUS
                 </h1>
 
-                <article>
-                <h2>
-                C9orf72 repeat expansions cause neurodegeneration in Drosophila
+              <article>
+              <h2>
+              FUS regulated RNA metabolism and DNA damage repair
 
-                </h2>
-                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 15, 2014 at 9:00 PM</p>
-                <p>In a study published on September 5, 2014 London researchers found that pure C9orf72 GGGGCC repeats, but not stop codon interrupted RNA only repeats in Drosophila cause neurodegeneration</p>
-                <a class="btn btn-danger" href="science0905.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+              </h2>
+              <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
+              </p>
+              <p><span class="glyphicon glyphicon-time"></span> Posted on September 29, 2014 at 10:47 AM</p>
+              <p>FUS cytoplasmic inclusions in neurons and glia are a characteristic of ALS and FTD. These inclusions cause a dysregulation in RNA metabolism. A study published on PLOS Genetics in June 2014
+              shows that FUS targets RNA for pre-mRNA alternative splicing and processing of long intron containing transcripts, which are enriched for genes in neurogenesis and gene expression regulation.</p>
+              <a class="btn btn-danger" href="plos0612.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
-                <hr>
-              </article>
-
-                <article>
-                <h2>
-                Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides
-
-                </h2>
-                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 26, 2014 at 6:00 PM</p>
-                <p>In a study published in early 2013, researchers from the Mayo Clinic found that C9RANT aggregates resulting from non-ATG (RAN) translation form in neurons containing the GGGGCC repeat expansion in C9orf72, which is the most common genetic cause of ALS and c9FTD. </p>
-                <a class="btn btn-danger" href="neuron2002.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-                <hr>
-                </article>
-
-                <!-- First Blog Post -->
-                <article>
-                <h2>
-                Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion
-
-                </h2>
-                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 15, 2014 at 9:00 PM</p>
-                <p>Researchers from The Scripps Research Institute and the Mayo Clinic identified a small molecule capable of stopping disease progression in a model of C9ORF72 linked FTD and ALS, which is the most common type of the diseases, caused by a GGGGCC repeat expansion in said gene. </p>
-                <a class="btn btn-danger" href="neuron1408.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-
-                <hr>
-              </article>
+              <hr>
+            </article>
 
                 <!-- Pager -->
                 <ul class="pager">
