--- a/nature2108.html
+++ b/nature2108.html
@@ -130,72 +130,52 @@
                 <a class="btn btn-danger btn-lg" href="http://eepurl.com/2fBqL" style="color: #FFFFFF">Subscribe to my feed</a>
               </div>
 
-             <div class="panel panel-default">
-               <div class="panel-heading">
-                 <h4>Latest Posts</h4>
-               </div>
-               <ul class="list-group">
-                 <li class="list-group-item"><a href="jneurosci0611.html">1. Profilin 1 is associated with stress granules </a></li>
-                 <li class="list-group-item"><a href="science0905.html">2. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
-                 <li class="list-group-item"><a href="nature2108.html">3. Telomerase Expression in ALS </a></li>
-                 <li class="list-group-item"><a href="neuron2002.html">4. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
-                 <li class="list-group-item"><a href="neuron1408.html">5. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
-               </ul>
-             </div>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h4>Latest Posts</h4>
+  </div>
+  <ul class="list-group">
+    <li class="list-group-item"><a href="plos0612.html">1. FUS regulated RNA metabolism and DNA damage repair </a></li>
+    <li class="list-group-item"><a href="jneurosci0611.html">2. Profilin 1 is associated with stress granules </a></li>
+    <li class="list-group-item"><a href="science0905.html">3. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
+    <li class="list-group-item"><a href="nature2108.html">4. Telomerase Expression in ALS </a></li>
+    <li class="list-group-item"><a href="neuron2002.html">5. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
+  </ul>
+</div>
 
-              <!-- Blog Categories Well -->
-              <div class="well">
-                  <h4>Blog Categories</h4>
-                  <div class="row">
-                      <div class="col-lg-6">
-                          <ul class="list-unstyled">
-                              <li><a href="newest.html">Newest Research</a>
-                              </li>
-                              <li><a href="pipeline.html">Pipeline</a>
-                              </li>
-                              <li><a href="major.html">Major Papers</a>
-                              </li>
-                          </ul>
-                      </div>
-                      <!-- /.col-lg-6
-                      <div class="col-lg-6">
-                          <ul class="list-unstyled">
-                              <li><a href="#">Category Name</a>
-                              </li>
-                              <li><a href="#">Category Name</a>
-                              </li>
-                              <li><a href="#">Category Name</a>
-                              </li>
-                              <li><a href="#">Category Name</a>
-                              </li>
-                          </ul>
-                      </div>
-                       /.col-lg-6 -->
-                  </div>
-                  <!-- /.row -->
-              </div>
+ <!-- Blog Categories Well -->
+ <div class="well">
+     <h4>Blog Categories</h4>
+     <div class="row">
+         <div class="col-lg-6">
+             <ul class="list-unstyled">
+                 <li><a href="newest.html">Newest Research</a>
+                 </li>
+                 <li><a href="pipeline.html">Pipeline</a>
+                 </li>
+                 <li><a href="major.html">Major Papers</a>
+                 </li>
+             </ul>
+         </div>
+     </div>
+ </div>
 
-              <div class="panel panel-default">
-                <div class="panel-heading">
-                  <h4>Tags</h4>
-                </div>
-                <div class="panel-body">
-                  <ul class="list-inline">
-                    <li><a href="c9orf72.html">C9ORF72</a></li>
-                    <li><a href="smallMolecules.html">Small Molecules</a></li>
-                    <li><a href="biomarkers.html">Biomarkers</a></li>
-                    <li><a href="telomerase.html">Telomerase</a></li>
-                    <li><a href="pfy1.html">PFY1</a></li>
-                    <!--<li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>-->
-          </ul>
-          </div>
-          </div>
+ <div class="panel panel-default">
+   <div class="panel-heading">
+     <h4>Tags</h4>
+   </div>
+   <div class="panel-body">
+     <ul class="list-inline">
+       <li><a href="c9orf72.html">C9ORF72</a></li>
+       <li><a href="smallMolecules.html">Small Molecules</a></li>
+       <li><a href="biomarkers.html">Biomarkers</a></li>
+       <li><a href="telomerase.html">Telomerase</a></li>
+       <li><a href="pfy1.html">PFY1</a></li>
+       <li><a href="fus.html">FUS</a></li>
+     </ul>
+   </div>
+</div>
+
 
 
     <!-- Side Widget Well -->
