--- a/newest2.html
+++ b/newest2.html
@@ -74,45 +74,15 @@
 
                 <article>
                 <h2>
-                FUS regulated RNA metabolism and DNA damage repair
+                Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion
 
                 </h2>
                 <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
                 </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on September 29, 2014 at 10:47 AM</p>
-                <p>FUS cytoplasmic inclusions in neurons and glia are a characteristic of ALS and FTD. These inclusions cause a dysregulation in RNA metabolism. A study published on PLOS Genetics in June 2014
-                shows that FUS targets RNA for pre-mRNA alternative splicing and processing of long intron containing transcripts, which are enriched for genes in neurogenesis and gene expression regulation.</p>
-                <a class="btn btn-danger" href="plos0612.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on August 15, 2014 at 9:00 PM</p>
+                <p>Researchers from The Scripps Research Institute and the Mayo Clinic identified a small molecule capable of stopping disease progression in a model of C9ORF72 linked FTD and ALS, which is the most common type of the diseases, caused by a GGGGCC repeat expansion in said gene. </p>
+                <a class="btn btn-danger" href="neuron1408.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
-                <hr>
-              </article>
-
-              <article>
-                <h2>
-                Profilin 1 is associated with stress granules
-
-                </h2>
-                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on September 17, 2014 at 3:10 PM</p>
-                <p>Mutations in the gene encoding profilin 1 are a cause of fALS, but the mechanisms through which these mutations cause ALS are unknonw.
-                In a study published in June on The Journal of Neuroscience, a team of researchers from Stanford University used yeast to try to gain a better understanding of the pathogenic mechanism of the mutations.</p>
-                <a class="btn btn-danger" href="jneurosci0611.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-
-                <hr>
-              </article>
-
-                <article>
-                <h2>
-                Telomerase Expression in ALS
-
-                </h2>
-                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on September 1, 2014 at 1:00 PM</p>
-                <p>Telomerase has been linked to several neurological disorders. Human telomerase reverse transcriptase (hTERT) expression had never been characterized in ALS.
-                In a study plublished on August 21 on the Journal of Human Genetics, a team of researchers from Italy characterized telomerase in blood samples and spinal cord from 50 ALS patients and 50 controls.</p>
-                <a class="btn btn-danger" href="nature2108.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
                 <hr>
               </article>
 
@@ -139,52 +109,51 @@
                 <a class="btn btn-danger btn-lg" href="http://eepurl.com/2fBqL" style="color: #FFFFFF">Subscribe to my feed</a>
               </div>
 
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4>Latest Posts</h4>
-    </div>
-    <ul class="list-group">
-      <li class="list-group-item"><a href="plos0612.html">1. FUS regulated RNA metabolism and DNA damage repair </a></li>
-      <li class="list-group-item"><a href="jneurosci0611.html">2. Profilin 1 is associated with stress granules </a></li>
-      <li class="list-group-item"><a href="science0905.html">3. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
-      <li class="list-group-item"><a href="nature2108.html">4. Telomerase Expression in ALS </a></li>
-      <li class="list-group-item"><a href="neuron2002.html">5. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
-    </ul>
+               <div class="panel panel-default">
+  <div class="panel-heading">
+    <h4>Latest Posts</h4>
   </div>
-
-   <!-- Blog Categories Well -->
-   <div class="well">
-       <h4>Blog Categories</h4>
-       <div class="row">
-           <div class="col-lg-6">
-               <ul class="list-unstyled">
-                   <li><a href="newest.html">Newest Research</a>
-                   </li>
-                   <li><a href="pipeline.html">Pipeline</a>
-                   </li>
-                   <li><a href="major.html">Major Papers</a>
-                   </li>
-               </ul>
-           </div>
-       </div>
-   </div>
-
-   <div class="panel panel-default">
-     <div class="panel-heading">
-       <h4>Tags</h4>
-     </div>
-     <div class="panel-body">
-       <ul class="list-inline">
-         <li><a href="c9orf72.html">C9ORF72</a></li>
-         <li><a href="smallMolecules.html">Small Molecules</a></li>
-         <li><a href="biomarkers.html">Biomarkers</a></li>
-         <li><a href="telomerase.html">Telomerase</a></li>
-         <li><a href="pfy1.html">PFY1</a></li>
-         <li><a href="fus.html">FUS</a></li>
-       </ul>
-     </div>
+  <ul class="list-group">
+    <li class="list-group-item"><a href="plos0612.html">1. FUS regulated RNA metabolism and DNA damage repair </a></li>
+    <li class="list-group-item"><a href="jneurosci0611.html">2. Profilin 1 is associated with stress granules </a></li>
+    <li class="list-group-item"><a href="science0905.html">3. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
+    <li class="list-group-item"><a href="nature2108.html">4. Telomerase Expression in ALS </a></li>
+    <li class="list-group-item"><a href="neuron2002.html">5. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
+  </ul>
 </div>
 
+ <!-- Blog Categories Well -->
+ <div class="well">
+     <h4>Blog Categories</h4>
+     <div class="row">
+         <div class="col-lg-6">
+             <ul class="list-unstyled">
+                 <li><a href="newest.html">Newest Research</a>
+                 </li>
+                 <li><a href="pipeline.html">Pipeline</a>
+                 </li>
+                 <li><a href="major.html">Major Papers</a>
+                 </li>
+             </ul>
+         </div>
+     </div>
+ </div>
+
+ <div class="panel panel-default">
+   <div class="panel-heading">
+     <h4>Tags</h4>
+   </div>
+   <div class="panel-body">
+     <ul class="list-inline">
+       <li><a href="c9orf72.html">C9ORF72</a></li>
+       <li><a href="smallMolecules.html">Small Molecules</a></li>
+       <li><a href="biomarkers.html">Biomarkers</a></li>
+       <li><a href="telomerase.html">Telomerase</a></li>
+       <li><a href="pfy1.html">PFY1</a></li>
+       <li><a href="fus.html">FUS</a></li>
+     </ul>
+   </div>
+</div>
 
 
                 <!-- Side Widget Well -->
