--- a/editorial.html
+++ b/editorial.html
@@ -70,7 +70,7 @@
                     Editorial
                 </h1>
 
-                <a href="http://cv.mariachavez.co"><h2>Maria Chavez</h2></a>, Writer and Editor
+                <a href="http://cv.mariachavez.co"><h2>Maria Chavez</h2></a> Writer and Editor
                 <p>My name is Maria Chavez and I am a 16 year old ALS researcher from Guatemala. I started researching ALS when I was 13, 2 years after someone I know was diagnosed with ALS. Since then I've focused my efforts in understanding the disease, and I want to help others understand it too; which is the reason behind starting this blog.</p>
                 <hr>
 
