--- a/plos0612.html
+++ b/plos0612.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FUS regulated RNA metabolism and DNA damage repair
+    <title>FUS regulates RNA metabolism and DNA damage repair
         </title>
 
     <!-- Bootstrap Core CSS -->
@@ -74,7 +74,7 @@
                 <!-- Blog Post -->
 
                 <!-- Title -->
-                <h2>FUS regulated RNA metabolism and DNA damage repair</h2>
+                <h2>FUS regulates RNA metabolism and DNA damage repair</h2>
 
                 <!-- Author -->
                 <p class="lead">
