--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                 <article>
                 <h2>
-                FUS regulated RNA metabolism and DNA damage repair
+                FUS regulates RNA metabolism and DNA damage repair
 
                 </h2>
                 <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
