--- a/3.html
+++ b/3.html
@@ -67,10 +67,8 @@
             <div class="col-md-8">
 
                 <h1 class="page-header">
-                    Newest research
+                    ALS news
                 </h1>
-
-                <!-- First Blog Post -->
 
                 <article>
                 <h2>
@@ -86,75 +84,95 @@
                 <hr>
               </article>
 
-
                 <!-- Pager -->
                 <ul class="pager">
                     <li class="previous">
                         <a href="#">&larr; Older</a>
                     </li>
                     <li class="next">
-                        <a href="#">Newer &rarr;</a>
+                        <a href="2.html">Newer &rarr;</a>
                     </li>
                 </ul>
 
             </div>
 
             <!-- Blog Sidebar Widgets Column -->
-<div class="col-md-4">
+            <div class="col-md-4">
 
-  <div class="well text-center">
-    <p class="lead">
-      Don't want to miss updates? Please click the below button!
-    </p>
-    <a class="btn btn-danger btn-lg" href="http://eepurl.com/2fBqL" style="color: #FFFFFF">Subscribe to my feed</a>
+               <div class="well text-center">
+                 <p class="lead">
+                   Don't want to miss updates? Please click the below button!
+                 </p>
+                 <a class="btn btn-danger btn-lg" href="http://eepurl.com/2fBqL" style="color: #FFFFFF">Subscribe to my feed</a>
+               </div>
+
+               <!--<div class="well">
+                   <h4>Blog Search</h4>
+                   <div class="input-group">
+                     <script>
+                     (function() {
+                       var cx = '011906290031035704904:-o-3j3gb-bi';
+                       var gcse = document.createElement('script');
+                       gcse.type = 'text/javascript';
+                       gcse.async = true;
+                       gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+                           '//www.google.com/cse/cse.js?cx=' + cx;
+                       var s = document.getElementsByTagName('script')[0];
+                       s.parentNode.insertBefore(gcse, s);
+                     })();
+                   </script>
+                   <gcse:search></gcse:search>
+                   </div>
+               </div>-->
+
+               <div class="panel panel-default">
+  <div class="panel-heading">
+    <h4>Latest Posts</h4>
   </div>
-
-<div class="panel panel-default">
-<div class="panel-heading">
-<h4>Latest Posts</h4>
-</div>
-<ul class="list-group">
-<li class="list-group-item"><a href="nature809.html">1. Mutations in UBQLN2 are a cause of ALS </a></li>
-<li class="list-group-item"><a href="plos0612.html">2. FUS regulated RNA metabolism and DNA damage repair </a></li>
-<li class="list-group-item"><a href="jneurosci0611.html">3. Profilin 1 is associated with stress granules </a></li>
-<li class="list-group-item"><a href="science0905.html">4. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
-<li class="list-group-item"><a href="nature2108.html">5. Telomerase Expression in ALS </a></li>
-</ul>
+  <ul class="list-group">
+    <li class="list-group-item"><a href="plos0612.html">1. FUS regulated RNA metabolism and DNA damage repair </a></li>
+    <li class="list-group-item"><a href="jneurosci0611.html">2. Profilin 1 is associated with stress granules </a></li>
+    <li class="list-group-item"><a href="science0905.html">3. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
+    <li class="list-group-item"><a href="nature2108.html">4. Telomerase Expression in ALS </a></li>
+    <li class="list-group-item"><a href="neuron2002.html">5. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
+  </ul>
 </div>
 
-<!-- Blog Categories Well -->
-<div class="well">
-<h4>Blog Categories</h4>
-<div class="row">
-<div class="col-lg-6">
- <ul class="list-unstyled">
-     <li><a href="newest.html">Newest Research</a>
-     </li>
-     <li><a href="pipeline.html">Pipeline</a>
-     </li>
-     <li><a href="major.html">Major Papers</a>
-     </li>
- </ul>
-</div>
-</div>
+ <!-- Blog Categories Well -->
+ <div class="well">
+     <h4>Blog Categories</h4>
+     <div class="row">
+         <div class="col-lg-6">
+             <ul class="list-unstyled">
+                 <li><a href="newest.html">Newest Research</a>
+                 </li>
+                 <li><a href="pipeline.html">Pipeline</a>
+                 </li>
+                 <li><a href="major.html">Major Papers</a>
+                 </li>
+             </ul>
+         </div>
+     </div>
+ </div>
+
+ <div class="panel panel-default">
+   <div class="panel-heading">
+     <h4>Tags</h4>
+   </div>
+   <div class="panel-body">
+     <ul class="list-inline">
+       <li><a href="c9orf72.html">C9ORF72</a></li>
+       <li><a href="smallMolecules.html">Small Molecules</a></li>
+       <li><a href="biomarkers.html">Biomarkers</a></li>
+       <li><a href="telomerase.html">Telomerase</a></li>
+       <li><a href="pfy1.html">PFY1</a></li>
+       <li><a href="fus.html">FUS</a></li>
+     </ul>
+   </div>
 </div>
 
-<div class="panel panel-default">
-<div class="panel-heading">
-<h4>Tags</h4>
-</div>
-<div class="panel-body">
-<ul class="list-inline">
-<li><a href="c9orf72.html">C9ORF72</a></li>
-<li><a href="smallMolecules.html">Small Molecules</a></li>
-<li><a href="biomarkers.html">Biomarkers</a></li>
-<li><a href="telomerase.html">Telomerase</a></li>
-<li><a href="pfy1.html">PFY1</a></li>
-<li><a href="fus.html">FUS</a></li>
-<li><a href="ubqln2.html">UBQLN2</a></li>
-</ul>
-</div>
-</div>
+
+
 
                 <!-- Side Widget Well -->
 
@@ -195,6 +213,7 @@
   ga('send', 'pageview');
 
 </script>
+
 </body>
 
 </html>
