--- a/ubqln2.html
+++ b/ubqln2.html
@@ -67,60 +67,22 @@
             <div class="col-md-8">
 
                 <h1 class="page-header">
-                    Small molecules
+                    UBQLN2
                 </h1>
 
-                <!-- First Blog Post -->
-                <article>
-                <h2>
-                Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion
+            <article>
+            <h2>
+            Mutations in UBQLN2 are a cause of ALS
 
-                </h2>
-                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 15, 2014 at 9:00 PM</p>
-                <p>Researchers from The Scripps Research Institute and the Mayo Clinic identified a small molecule capable of stopping disease progression in a model of C9ORF72 linked FTD and ALS, which is the most common type of the diseases, caused by a GGGGCC repeat expansion in said gene. </p>
-                <a class="btn btn-danger" href="neuron1408.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+            </h2>
+            <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
+            </p>
+            <p><span class="glyphicon glyphicon-time"></span> Posted on October 29, 2014 at 1:54 PM</p>
+            <p>FMutations in FUS, TDP43 and SOD1 account for about 30% of fALS cases, but the cause for the rest is still unknown. A paper published in Nature in 2011 shows that UBQLN2 is a cause of dominantly inherited chromosome X linked ALS and ALS dementia. This mutation seems to lead to impaired protein degradation.</p>
+            <a class="btn btn-danger" href="nature809.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
-                <hr>
-              </article>
-
-                <!-- Second Blog Post
-
-                <article>
-                <h2>
-                    <a href="#">Blog Post Title</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 28, 2013 at 10:45 PM</p>
-                <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quasi, fugiat, asperiores harum voluptatum tenetur a possimus nesciunt quod accusamus saepe tempora ipsam distinctio minima dolorum perferendis labore impedit voluptates!</p>
-                <a class="btn btn-danger" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-
-                <hr>
-              </article>-->
-
-                <!-- Third Blog Post
-                <article>
-                <h2>
-                    <a href="#">Blog Post Title</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 28, 2013 at 10:45 PM</p>
-                <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, voluptates, voluptas dolore ipsam cumque quam veniam accusantium laudantium adipisci architecto itaque dicta aperiam maiores provident id incidunt autem. Magni, ratione.</p>
-                <a class="btn btn-danger" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-
-                <hr>
-              </article> -->
+            <hr>
+          </article>
 
                 <!-- Pager -->
                 <ul class="pager">
