--- a/index.html
+++ b/index.html
@@ -71,7 +71,20 @@
                 </h1>
 
 
-                <!-- Post Content -->
+
+                <article>
+                <h2>
+                Mutations in UBQLN2 are a cause of ALS
+
+                </h2>
+                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
+                </p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on October 29, 2014 at 1:54 PM</p>
+                <p>FMutations in FUS, TDP43 and SOD1 account for about 30% of fALS cases, but the cause for the rest is still unknown. A paper published in Nature in 2011 shows that UBQLN2 is a cause of dominantly inherited chromosome X linked ALS and ALS dementia. This mutation seems to lead to impaired protein degradation.</p>
+                <a class="btn btn-danger" href="nature809.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+
+                <hr>
+              </article>
 
                 <article>
                 <h2>
@@ -104,20 +117,6 @@
                 <hr>
               </article>
 
-                <article>
-                <h2>
-                C9orf72 repeat expansions cause neurodegeneration in Drosophila
-
-                </h2>
-                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on September 5, 2014 at 3:20 PM</p>
-                <p>In a study published on September 5, 2014 London researchers found that pure C9orf72 GGGGCC repeats, but not stop codon interrupted RNA only repeats in Drosophila cause neurodegeneration</p>
-                <a class="btn btn-danger" href="science0905.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-
-                <hr>
-              </article>
-
 
                 <!-- Pager -->
                 <ul class="pager">
@@ -132,78 +131,60 @@
             </div>
 
             <!-- Blog Sidebar Widgets Column -->
-            <div class="col-md-4">
+<div class="col-md-4">
 
-               <div class="well text-center">
-                 <p class="lead">
-                   Don't want to miss updates? Please click the below button!
-                 </p>
-                 <a class="btn btn-danger btn-lg" href="http://eepurl.com/2fBqL" style="color: #FFFFFF">Subscribe to my feed</a>
-               </div>
-
-               <!--<div class="well">
-                   <h4>Blog Search</h4>
-                   <div class="input-group">
-                     <script>
-                     (function() {
-                       var cx = '011906290031035704904:-o-3j3gb-bi';
-                       var gcse = document.createElement('script');
-                       gcse.type = 'text/javascript';
-                       gcse.async = true;
-                       gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-                           '//www.google.com/cse/cse.js?cx=' + cx;
-                       var s = document.getElementsByTagName('script')[0];
-                       s.parentNode.insertBefore(gcse, s);
-                     })();
-                   </script>
-                   <gcse:search></gcse:search>
-                   </div>
-               </div>-->
-
-               <div class="panel panel-default">
-  <div class="panel-heading">
-    <h4>Latest Posts</h4>
+  <div class="well text-center">
+    <p class="lead">
+      Don't want to miss updates? Please click the below button!
+    </p>
+    <a class="btn btn-danger btn-lg" href="http://eepurl.com/2fBqL" style="color: #FFFFFF">Subscribe to my feed</a>
   </div>
-  <ul class="list-group">
-    <li class="list-group-item"><a href="plos0612.html">1. FUS regulated RNA metabolism and DNA damage repair </a></li>
-    <li class="list-group-item"><a href="jneurosci0611.html">2. Profilin 1 is associated with stress granules </a></li>
-    <li class="list-group-item"><a href="science0905.html">3. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
-    <li class="list-group-item"><a href="nature2108.html">4. Telomerase Expression in ALS </a></li>
-    <li class="list-group-item"><a href="neuron2002.html">5. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
-  </ul>
+
+<div class="panel panel-default">
+<div class="panel-heading">
+<h4>Latest Posts</h4>
+</div>
+<ul class="list-group">
+<li class="list-group-item"><a href="nature809.html">1. Mutations in UBQLN2 are a cause of ALS </a></li>
+<li class="list-group-item"><a href="plos0612.html">2. FUS regulated RNA metabolism and DNA damage repair </a></li>
+<li class="list-group-item"><a href="jneurosci0611.html">3. Profilin 1 is associated with stress granules </a></li>
+<li class="list-group-item"><a href="science0905.html">4. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
+<li class="list-group-item"><a href="nature2108.html">5. Telomerase Expression in ALS </a></li>
+</ul>
 </div>
 
- <!-- Blog Categories Well -->
- <div class="well">
-     <h4>Blog Categories</h4>
-     <div class="row">
-         <div class="col-lg-6">
-             <ul class="list-unstyled">
-                 <li><a href="newest.html">Newest Research</a>
-                 </li>
-                 <li><a href="pipeline.html">Pipeline</a>
-                 </li>
-                 <li><a href="major.html">Major Papers</a>
-                 </li>
-             </ul>
-         </div>
-     </div>
- </div>
+<!-- Blog Categories Well -->
+<div class="well">
+<h4>Blog Categories</h4>
+<div class="row">
+<div class="col-lg-6">
+ <ul class="list-unstyled">
+     <li><a href="newest.html">Newest Research</a>
+     </li>
+     <li><a href="pipeline.html">Pipeline</a>
+     </li>
+     <li><a href="major.html">Major Papers</a>
+     </li>
+ </ul>
+</div>
+</div>
+</div>
 
- <div class="panel panel-default">
-   <div class="panel-heading">
-     <h4>Tags</h4>
-   </div>
-   <div class="panel-body">
-     <ul class="list-inline">
-       <li><a href="c9orf72.html">C9ORF72</a></li>
-       <li><a href="smallMolecules.html">Small Molecules</a></li>
-       <li><a href="biomarkers.html">Biomarkers</a></li>
-       <li><a href="telomerase.html">Telomerase</a></li>
-       <li><a href="pfy1.html">PFY1</a></li>
-       <li><a href="fus.html">FUS</a></li>
-     </ul>
-   </div>
+<div class="panel panel-default">
+<div class="panel-heading">
+<h4>Tags</h4>
+</div>
+<div class="panel-body">
+<ul class="list-inline">
+<li><a href="c9orf72.html">C9ORF72</a></li>
+<li><a href="smallMolecules.html">Small Molecules</a></li>
+<li><a href="biomarkers.html">Biomarkers</a></li>
+<li><a href="telomerase.html">Telomerase</a></li>
+<li><a href="pfy1.html">PFY1</a></li>
+<li><a href="fus.html">FUS</a></li>
+<li><a href="ubqln2.html">UBQLN2</a></li>
+</ul>
+</div>
 </div>
 
 
