--- a/ubqln2.html
+++ b/ubqln2.html
@@ -78,7 +78,7 @@
             <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
             </p>
             <p><span class="glyphicon glyphicon-time"></span> Posted on October 29, 2014 at 1:54 PM</p>
-            <p>FMutations in FUS, TDP43 and SOD1 account for about 30% of fALS cases, but the cause for the rest is still unknown. A paper published in Nature in 2011 shows that UBQLN2 is a cause of dominantly inherited chromosome X linked ALS and ALS dementia. This mutation seems to lead to impaired protein degradation.</p>
+            <p>Mutations in FUS, TDP43 and SOD1 account for about 30% of fALS cases, but the cause for the rest is still unknown. A paper published in Nature in 2011 shows that UBQLN2 is a cause of dominantly inherited chromosome X linked ALS and ALS dementia. This mutation seems to lead to impaired protein degradation.</p>
             <a class="btn btn-danger" href="nature809.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
             <hr>
