--- a/index.html
+++ b/index.html
@@ -133,6 +133,20 @@
             <!-- Blog Sidebar Widgets Column -->
 <div class="col-md-4">
 
+  <script>
+  (function() {
+    var cx = '011906290031035704904:-o-3j3gb-bi';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+        '//www.google.com/cse/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
+
   <div class="well text-center">
     <p class="lead">
       Don't want to miss updates? Please click the below button!
